FE-74 [FEAT] 근본없는 온보딩 페이지 디자인 변경..

--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,3 +3,7 @@
     font-style: normal;
     src: url('@/assets/fonts/GmarketSansTTF/GmarketSansTTFMedium.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'Azonix';
+    src: url('@/assets/fonts/Azonix.otf') format('opentype');
+}
