--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,6 +3,38 @@
     font-style: normal;
     src: url('@/assets/fonts/GmarketSansTTF/GmarketSansTTFMedium.ttf') format('truetype');
 }
+
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 900;
+    src: url('@/assets/fonts/Roboto/Roboto-Black.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 700;
+    src: url('@/assets/fonts/Roboto/Roboto-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 500;
+    src: url('@/assets/fonts/Roboto/Roboto-Light.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 300;
+    src: url('@/assets/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 200;
+    src: url('@/assets/fonts/Roboto/Roboto-Regular.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Roboto';
+    font-weight : 100;
+    src: url('@/assets/fonts/Roboto/Roboto-Thin.ttf') format('truetype');
+}
 @font-face {
     font-family: 'Azonix';
     src: url('@/assets/fonts/Azonix.otf') format('opentype');
